--- a/src/style/LoginPage.scss
+++ b/src/style/LoginPage.scss
@@ -3,30 +3,41 @@
  * 로그인 페이지, 회원가입 페이지 scss
  */
 
+ /**
+  * 로그인 페이지, 회원가입 페이지 버튼(공통)
+  */
+.login-page button, .signup-page button {
+    font-family: 'NanumSquare', sans-serif;
+    font-weight: bold;
+    color: white;
+    
+    border: none;
+    border-radius: 8px;
+    background-color: #69a65f;
+    
+    cursor: pointer;
+}
+
+.login-page button:hover, .signup-page button:hover {
+    background-color: #95C77E;
+}
+
 /**
  * 로그인 페이지
  */
 .login-page {
     width: 100%;
+
+    font-weight: normal;
+    
     background-color: #eef5ed;
+
     padding-top: 1%;
     padding-bottom: 3%;
 }
 
-button {
-    font-family: 'NanumSquare', sans-serif;
-    font-weight: bold;
-    color: white;
-
-    border: none;
-    border-radius: 8px;
-    background-color: #69a65f;
-
-    cursor: pointer;
-}
-
 .login {
-    height: 50vh; // div height
+    height: 55vh; // div height
     width: 50vh;
 
     display: flex;
@@ -41,37 +52,43 @@ button {
 
     h2 { // 로그인 문구
         color: #376330;
-        background-color: white;
 
+        margin-top: -3%;
         margin-bottom: 12%;
+
+        padding: 1.5%;
     }
 
     form { // 로그인 폼
+        width: 80%;
+
         display: flex;
         flex-direction: column; // 세로 정렬
         align-items: center;
 
         input {
-            width: 150%;
+            font-family: 'NanumSquare', sans-serif;
+
+            width: 90%;
             height: 30px;
 
             margin: 3%;
+            margin-bottom: 10%;
         }
 
         button { // 로그인 버튼
             width: 70%;
             height: 30px;
-            
-            margin-top: 15%;
         }
 
         span { // 경고 문구
-            font-size: 71%;
+            font-size: 85%;
+            font-weight: bold;
             color: red;
 
             height: 10px;
-
-            margin-top: 10%;
+            
+            padding-bottom: 4%;
         }
     }
 }
@@ -94,63 +111,90 @@ button {
 /**
  * 회원가입 페이지
  */
+.signup-page {
+    width: 100%;
+
+    font-weight: normal;
+    
+    background-color: #eef5ed;
+
+    padding-top: 1%;
+    padding-bottom: 3%;
+}
+
 .signup {
-    height: 70vh; // div height
+    height: 100vh; // div height
+    width: 80vh;
 
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 
-    background-color: #eef5ed;
-    
-    padding-bottom:10%;
-    padding-top:5%;
+    border-radius: 15px;
+    background-color: white;
 
-    h2{
-        //margin-top:-20px;
-        //padding: 12px;
-        //height: auto;  
-        //background-color: #eef5ed; 
-        text-align: left;
+    margin-top: 4%;
+
+    h2 { // 회원가입 문구
+        color: #376330;
+
+        margin-top: -3%;
+        margin-bottom: 6%;
+
+        padding: 1.5%;
     }
 
-    form{
+    form { // 회원가입 폼
+        width: 100%;
+
         display: flex;
-        flex-direction: column; //세로정렬
+        flex-direction: column; // 세로 정렬
         align-items: center;
-        background: white;
-        border-radius: 15px;
-        padding-left: 3%;
-        padding-right: 3%;
-        padding-bottom:3%;
-        padding-top:2%;
-        margin-top:5%;
-
-        input{
-            width: 200px;
+        
+        input {
+            font-family: 'NanumSquare', sans-serif;
+            
+            width: 50%;
             height: 30px;
-            margin: 10px;
-        }
 
-        button{
-            margin-top: -5%;
-            width: 200px;
-            height: 30px;
-            border: none;
-            border-radius: 8px;
-            background-color: #69a65f;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-            font-family: 'NanumSquare', sans-serif, bold;
+            margin: 2%;
         }
-
-        div{
-            input{
-                width: 300px;
-            }
-        }
-
     }
+
+    button { // 우편번호 찾기 버튼, 회원가입 버튼
+        width: 30%;
+        height: 30px;
+    }
+}
+
+.address-div { // 주소 영역
+    width: 100%;    
+}
+
+.address-input-div {
+    width: 60%;
+
+    float: left;
+
+    .address-input {
+        width: 100%;
+    }
+}
+
+.address-btn-div {
+    width: 40%;
+
+    float: right;
+
+    .address-btn {
+        width: 80%;
+
+        margin-left: 13.5%;
+        margin-top: 15%;
+    }
+}
+
+.signup-btn { // 회원가입 버튼
+    margin-top: 5%;
 }
