--- a/src/style/LoginPage.scss
+++ b/src/style/LoginPage.scss
@@ -67,13 +67,21 @@
         align-items: center;
 
         input {
-            font-family: 'NanumSquare', sans-serif;
-
             width: 90%;
             height: 30px;
 
             margin: 3%;
             margin-bottom: 10%;
+        }
+
+        input[type=email] {
+            font-family: 'NanumSquare', sans-serif;
+        }
+        
+        input[type=password] {        
+            &::placeholder {
+                font-family: "NanumSquare", sans-serif;
+            }
         }
 
         button { // 로그인 버튼
