--- a/src/style/explain.scss
+++ b/src/style/explain.scss
@@ -8,6 +8,10 @@ div {
   margin-right: auto;
 }
 
+.video-explain-div {
+  display: flex;
+}
+
 table, td, th {
     border-collapse : collapse;
     background-color: #eef5ed;
