explain css table 죽여버려

--- a/src/style/explain.scss
+++ b/src/style/explain.scss
@@ -4,8 +4,8 @@
  */
 
 div {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0%;
+  margin-right: 0%;
 }
 
 .video-explain-div {
@@ -22,7 +22,7 @@ table {
     border-right : 20px solid white;
     width : 100%;
     height: 100%;
-    margin: auto;
+    margin-right:0%;
 }
 
 td {
