--- a/src/style/explain2.scss
+++ b/src/style/explain2.scss
@@ -3,75 +3,43 @@
  * 메인 페이지 내 실종 반려견 목격시 대처 방법 css
  */
 
- div {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  table, td, th {
-      border-collapse : collapse;
-      background-color: #eef5ed;
-  }
-  
-  table {
-      border-left : 20px solid white;
-      border-right : 20px solid white;
-      width : 100%;
-      height: 100%;
-      margin: auto;
-  }
-  
-  td {
-      font-weight: 600;
-      padding: 10px;
-      text-align : center;
-      vertical-align : middle;
-      border-bottom: 3px solid white;
-      border-left: 3px solid white;
-  }
-  
-  .explain2-td {
-    font-weight: 400;
-  }
-  
-  th {
-      background-color: #b4c5b0;
-      padding: 10px;
-      text-align : center;
-      vertical-align : middle;
-      border-top: 3px solid white;
-      border-bottom: 3px solid white;
-      border-left: 3px solid white;
-  }
-  
-  .customBtn {
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-      text-align: center;
-      background-image: linear-gradient(to right, #eef5ed, #c0e2bb, #eef5ed);
-      width: 350px;
-      font-size: 16px;
-      font-weight: 600;
-      color: #000000;
-      cursor: pointer;
-      height: 32px;
-      text-align: center;
-      //border-left: 20px;
-      background-size: 300% 100%;
-      padding: 5px;
-      //text-align: right;
-      margin-left:30px;
-    
-      border-radius: 8px;
-      -o-transition: all 0.4s ease-in-out;
-      -webkit-transition: all 0.4s ease-in-out;
-      transition: all 0.4s ease-in-out;
-    }
-  
-    .customBtn:hover {
-      background-position: 30% 0;
-      -o-transition: all 0.4s ease-in-out;
-      -webkit-transition: all 0.4s ease-in-out;
-      transition: all 0.4s ease-in-out;
-    }
+.explain2 {
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+table, td, th {
+    border-collapse : collapse;
+    background-color: #eef5ed;
+}
+
+.explain2_table {
+    border-left : 20px solid white;
+    border-right : 20px solid white;
+    width : 100%;
+    height: 100%;
+    margin: 0%;
+}
+
+td {
+    font-weight: 600;
+    padding: 10px;
+    text-align : center;
+    vertical-align : middle;
+    border-bottom: 3px solid white;
+    border-left: 3px solid white;
+}
+
+.explain2-td {
+  font-weight: 400;
+}
+
+th {
+    background-color: #b4c5b0;
+    padding: 10px;
+    text-align : center;
+    vertical-align : middle;
+    border-top: 3px solid white;
+    border-bottom: 3px solid white;
+    border-left: 3px solid white;
+}
