--- a/src/style/LoginPage.scss
+++ b/src/style/LoginPage.scss
@@ -48,6 +48,7 @@
     border-radius: 15px;
     background-color: white;
     
+    margin: auto;
     margin-top: 4%;
 
     h2 { // 로그인 문구
@@ -142,6 +143,7 @@
     border-radius: 15px;
     background-color: white;
 
+    margin: auto;
     margin-top: 4%;
 
     h2 { // 회원가입 문구
