--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -36,7 +36,7 @@
         float: left;
 
         margin-top: 6px;
-        margin-left: 1.3%;
+        margin-left: 3.3%;
     }
 
     .header-logo-div {
@@ -46,7 +46,7 @@
         float: right;
 
         margin-top: 15px;
-        margin-right: 32%;
+        margin-right: 30%;
 
         .header-logo {
             width: 280px;
@@ -55,25 +55,15 @@
 }
   
 .header-right-div {
-    float: right;
     display: flex;
-    
-    width: 10%;
+
+    width: 7%;
+    margin-right: 3%;
+
+    justify-content: space-between;
 
     .header-profile, .header-admin {
         width: 40px;
         filter: invert(100%);
-    }
-
-    .header-profile-div {
-        float: right;
-
-        margin-right: 20%;
-    }
-    
-    .header-admin-div {
-        float: left;
-
-        margin-left: 10%;
     }
 }
