--- a/src/style/ForumPage.scss
+++ b/src/style/ForumPage.scss
@@ -1,12 +1,15 @@
-/*ForumPage.js*/
+/**
+ * ./src/style/ForumPage.scss
+ * 자유게시판 관련 scss
+ */
 
-.forum-page2{
+.forum-page2 {
     display: flex;
     position: relative;
     align-items: center;
     width: 500px;
     height: 25px;
-    margin-left:1.5%
+    margin-left: 1%;
 }
 
 .forumNumber{
@@ -26,7 +29,7 @@
 .forumUpload-btn{
     margin-top: -10px;
     margin-bottom: -10px;
-    margin-left: 1.5%;
+    margin-left: 1%;
     width: 150px;
     height: 30px;
     border: none;
@@ -72,50 +75,6 @@
         font-size:14px;
         cursor: pointer;
         font-family: 'NanumSquare', sans-serif, bold;
-    }
-
-    .post-detail-table{
-        table, td, th {
-            border-collapse : collapse;
-            background-color: #eef5ed;
-          }
-        
-        table {
-            border-left : 20px solid white;
-            border-right : 20px solid white;
-            width : 100%;
-            height: 100%;
-            margin: auto;
-            table-layout:fixed;
-        }
-        
-        td {
-            font-weight: 400;
-            padding: 10px;
-            text-align : center;
-            vertical-align : middle;
-            border-bottom: 3px solid white;
-            border-left: 3px solid white;
-            width: 90px;
-            height: 20px;
-        }
-        
-        th {
-            background-color: #b4c5b0;
-            padding: 10px;
-            text-align : center;
-            vertical-align : middle;
-            //border-top: 3px solid white;
-            border-bottom: 3px solid white;
-            border-left: 3px solid white;
-            width: 15px;
-            height: 20px;
-        }
-
-        .content-td {
-            text-align : left;
-            padding-left: 2%;
-        }
     }
 
     .Post-back-btn{
