--- a/src/style/explain2.scss
+++ b/src/style/explain2.scss
@@ -1,45 +1,9 @@
 /**
  * ./src/components/page/main/explain.scss
- * 메인 페이지 내 실종 반려견 목격시 대처 방법 css
+ * 메인 페이지 내 실종 반려견 목격시 대처 방법 scss
  */
 
 .explain2 {
-    margin-left: 1%;
-    margin-right: 1%;
-}
-
-table, td, th {
-    border-collapse : collapse;
-    background-color: #eef5ed;
-}
-
-.explain2_table {
-    border-left : 20px solid white;
-    border-right : 20px solid white;
-    width : 100%;
-    height: 100%;
-    margin: 0%;
-}
-
-td {
-    font-weight: 600;
-    padding: 10px;
-    text-align : center;
-    vertical-align : middle;
-    border-bottom: 3px solid white;
-    border-left: 3px solid white;
-}
-
-.explain2-td {
-  font-weight: 400;
-}
-
-th {
-    background-color: #b4c5b0;
-    padding: 10px;
-    text-align : center;
-    vertical-align : middle;
-    border-top: 3px solid white;
-    border-bottom: 3px solid white;
-    border-left: 3px solid white;
+    width: 96.3%;
+    margin: auto;
 }
