--- a/src/style/SearchPage.scss
+++ b/src/style/SearchPage.scss
@@ -39,13 +39,8 @@
   }
 
 .postObj{
-    // margin-left:1%;
+    margin: auto;
     padding-bottom: 10%;
-    margin-top:1%;
-}
-
-.Item-img{
-    border-radius:8px;
 }
 
 select {
