--- a/src/style/carousel.scss
+++ b/src/style/carousel.scss
@@ -1,11 +1,14 @@
 .carouselImg{
-    border-radius:5px;
-    justify-content: space-between;
-    margin-left:2%
+    width: 90%;
+    height: 370px;
+    
+    border-radius: 7px;
+
+    margin: auto;
 }
 
 .carousel-dogInfo{
-    margin-left:2.5%;
+    margin-left: 5%;
     padding-top:2%;
     margin-bottom:-1%;
 }
