관리자 페이지 업데이트

--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -10,7 +10,7 @@
 
 .miss-moreInfo-table, .find-moreInfo-table,
 .posting-table, .post-detail-table,
-.my-post-table {
+.my-post-table, .userList-table {
     width: 98%;
     margin: auto;
 }
@@ -18,7 +18,7 @@
 .explain-table, .explain2-table,
 .miss-moreInfo-table, .find-moreInfo-table,
 .posting-table, .post-detail-table,
-.my-post-table {
+.my-post-table, .userList-table {
     background-color: #eef5ed;
 
     height: 100%;
