--- a/src/style/AdminPage.scss
+++ b/src/style/AdminPage.scss
@@ -3,4 +3,11 @@
  * 관리자 페이지 scss
  */
 
-//
+.admin-page {
+    h3 {
+        margin: 0;
+        padding-top: 1%;
+        padding-left: 1%;
+        padding-bottom: 1%;
+    }
+}
