--- a/src/style/table.scss
+++ b/src/style/table.scss
@@ -32,7 +32,7 @@
       border: 3px solid white;
     }
   
-    .explain-td, .explain2-td {
+    .explain-td, .explain2-td, .userList-td {
       font-weight: 400;
     }
 
