--- a/App/app/src/main/res/layout/activity_detail_miss.xml
+++ b/App/app/src/main/res/layout/activity_detail_miss.xml
@@ -46,7 +46,7 @@
     <TextView
         android:id="@+id/textView41"
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
+        android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:text="실종 신고자 정보"
@@ -213,10 +213,12 @@
     <TextView
         android:id="@+id/detail_feature"
         android:layout_width="285dp"
-        android:layout_height="60dp"
-        android:textStyle="bold"
+        android:layout_height="50dp"
         android:layout_marginStart="1dp"
+        android:layout_marginEnd="4dp"
         android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView40"
         app:layout_constraintTop_toBottomOf="@+id/detail_specify" />
 
@@ -346,7 +348,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/detail_recycler"
         android:layout_width="409dp"
-        android:layout_height="180dp"
+        android:layout_height="150dp"
         android:layout_marginTop="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
